--- a/content/post/bibliography.bib
+++ b/content/post/bibliography.bib
@@ -14,3 +14,13 @@
     volume = {21},
     pages = {3439--3440},
  }
+ 
+@book{informationGeneFrequentlyAsked2018,
+  title = {Gene {{Frequently Asked Questions}}},
+  abstract = {This section includes more details about sources, updates, and conventions for genes of uncertain function (LOC symbols).},
+  language = {en},
+  publisher = {{National Center for Biotechnology Information (US)}},
+  author = {Information, National Center for Biotechnology and Pike, U. S. National Library of Medicine 8600 Rockville and MD, Bethesda and Usa, 20894},
+  month = apr,
+  year = {2018}
+}
